Fix misalignement visual bug

--- a/src/BasePack/assets/css/main.css
+++ b/src/BasePack/assets/css/main.css
@@ -4,6 +4,7 @@ body {
 
 .item {
     width: 250px;
+    height: 300px;
     float: left;
     margin: 20px;
 }
